css/main.css
/* ... */
.scroll-top i {
    color: #fff;
    font-size: 48px;
}



.animated {
    -webkit-animation-duration: 1s;
    animation-duration: 1s;
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}
.animated.infinite {
    -webkit-animation-iteration-count: infinite;
    animation-iteration-count: infinite;
}
.animated.hinge {
    -webkit-animation-duration: 2s;
    animation-duration: 2s;
}

/*the animation definition*/
@-webkit-keyframes fadeInUp {
    0% {
        opacity: 0;
        -webkit-transform: translate3d(0, 80px, 0);
        transform: translate3d(0, 80px, 0)
    }
    100% {
        opacity: 1;
        -webkit-transform: none;
        transform: none
    }
}
@keyframes fadeInUp {
    0% {
        opacity: 0;
        -webkit-transform: translate3d(0, 80px, 0);
        -ms-transform: translate3d(0, 80px, 0);
        transform: translate3d(0, 80px, 0)
    }
    100% {
        opacity: 1;
        -webkit-transform: none;
        -ms-transform: none;
        transform: none
    }
}
.fadeInUp {
    -webkit-animation-name: fadeInUp;
    animation-name: fadeInUp
}

/*Parallax Move*/
.parallax-move{
    overflow: hidden;
}
.parallax-move img {
  position: relative;
  z-index: 4;
  max-width: 100%;
  -webkit-transform-origin: 50% 50%;
  -moz-transform-origin: 50% 50%;
  -ms-transform-origin: 50% 50%;
  -o-transform-origin: 50% 50%;
  transform-origin: 50% 50%;
  -webkit-transition: opacity 0.3s ease-out, -webkit-transform 0.2s ease-out;
  -moz-transition: opacity 0.3s ease-out, -moz-transform 0.2s ease-out;
  -o-transition: opacity 0.3s ease-out, -o-transform 0.2s ease-out;
  transition: opacity 0.3s ease-out, transform 0.2s ease-out;
}

/* =Buttons
-------------------------------------------------------------- */

.btn {
    letter-spacing: 1.5pt;
    border-radius: 0;
    font-weight: 400;
}
.btn-1 {
    clear: both;
    margin-top: 45px;
    border: 1px solid #c5c5c5;
    color: #909090;
    padding: 10px 20px 10px 20px;
    text-transform: uppercase;
    font-weight: 700;
}
.btn-1:hover {
    border: 1px solid #56c8d4;
    box-shadow: 200px 0 0 0 #56c8d4 inset;
    color: #fff;
}

/* =Preloader
-------------------------------------------------------------- */

.cover {
    position: fixed;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    z-index: 99999;
    background: rgba(232, 232, 232, 0.95);
}

/* =Header
-------------------------------------------------------------- */

.header {
    height: 100px;
    width: 100%;
    background: #fff;
    z-index: 9;
    position: relative;
}
.logo {
    float: left;
    line-height: 100px;
}

a>span.site-name{
    text-transform: uppercase;
    letter-spacing: 1px;
    font-weight: bold;
    font-size: 16px;
}
a:hover>span.site-name{
    color: #333;
}

.logo h1 {
    line-height: 100px;
}

/*Slider Home*/
.slider-wrapper {
    position: relative;
}
.slider-images-wrapper {
    z-index: -1;
}
.slider-description {
    position: absolute;
    top: 45%;
    width: 100%;
    max-width: 100%;
}
.slider-description-inner {
    margin-left: 6%;
}
.slider-description-inner h1 {
    font-family: 'azedobold';
    font-size: 60px;
    letter-spacing: 8px;
}
.slider-description-inner h1 span {
    font-family: 'azedolight';
    background: #001489;
    padding: 22px;
    font-weight: 100;
    margin-left: 10px;
    line-height: 80px;
}
.cd-intro {
    float: left;
    margin-left: 6%;
}
.cd-headline {
    font-size: 30px;
    margin-top: 40px;
    color: #000;
    font-weight: 100;
    letter-spacing: 3pt;
}
.cd-words-wrapper {
    display: inline-block;
    position: relative;
}
.cd-words-wrapper b {
    display: inline-block;
    position: absolute;
    white-space: nowrap;
    left: 0;
    top: 0;
    font-weight: normal;
}
.cd-words-wrapper b.is-visible {
    position: relative;
}
.no-js .cd-words-wrapper b {
    opacity: 0;
}
.no-js .cd-words-wrapper b.is-visible {
    opacity: 1;
}
/* Text Slider Clip */
.cd-headline.clip span {
    display: inline-block;
    padding: .2em 0;
}
.cd-headline.clip .cd-words-wrapper {
    overflow: hidden;
    vertical-align: top;
}
.cd-headline.clip .cd-words-wrapper::after {
    /* line */
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    width: 1px;
    height: 100%;
    background-color: #000;
}
.cd-headline.clip b {
    font-family: 'Lekton', sans-serif;
    opacity: 0;
}
.cd-headline.clip b.is-visible {
    opacity: 1;
}
.header-page {
    position: relative;
    min-height: 450px;
}
.header-page .inner-content {
    padding: 25px;
    background: rgba(255, 255, 255, 0.8);
    display: table;
    height: 410px;
    width: calc(100% - 40px);
    margin-top: 20px;
    margin-left: 20px;
}
.header-page .inner-content.dribble-header {
    height: 220px;
}
.header-page .inner-content .header-content {
    display: table-cell;
    vertical-align: middle;
}
.header-page .inner-content .header-content h1 {
    text-align: center;
    font-size: 60px;
    font-family: 'azedobold', sans-serif;
}
.header-page .inner-content .header-content hr {
    float: none;
}
.header-page .inner-content .header-content p {
    text-align: center;
    font-size: 18px;
}
/* =Full Width Slider
-------------------------------------------------------------- */

.has-slider {
    position: absolute;
    background: transparent;
}
svg {
    display: block;
    overflow: visible;
}
.architecture-slider-menu {
    position: fixed;
    width: 100%;
    z-index: 4;
}
.slider-container {
    position: relative;
    height: 100%;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: all-scroll;
}
.slider-control {
    z-index: 2;
    position: absolute;
    top: 0;
    width: 12%;
    height: 100%;
    transition: opacity 0.3s;
    will-change: opacity;
    opacity: 0;
}
.slider-control.inactive:hover .slider-control:not(.inactive):hover {
    opacity: 1;
}
/* ... */

